# MemoScribe

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
assistant/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
assistant/migrations/: 0001_initial.py  __init__.py
audits/: __init__.py  admin.py  apps.py  models.py
audits/migrations/: 0001_initial.py  __init__.py
config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
core/: __init__.py  llm.py  models.py  utils.py  views.py
documents/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  __init__.py
logs/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
logs/migrations/: 0001_initial.py  __init__.py
notes/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
notes/migrations/: 0001_initial.py  __init__.py
preferences/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
preferences/migrations/: 0001_initial.py  __init__.py
retrieval/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py
retrieval/migrations/: 0001_initial.py  __init__.py
static/js/: main.js
tasks/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: base.html  dashboard.html  landing.html  search.html  settings.html
tests/: conftest.py  test_llm.py  test_models.py  test_utils.py
(+30 files in other folders)
